tests/build/cases/widget/attrs_allowed_in_properties.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `disabled_cfg`
  --> cases/widget/attrs_allowed_in_properties.rs:36:9
   |
36 |         disabled_cfg = 0;
   |         ^^^^^^^^^^^^ use of undeclared crate or module `disabled_cfg`

warning: unused import: `zero_ui::properties::margin`
 --> cases/widget/attrs_allowed_in_properties.rs:5:9
  |
5 |     use zero_ui::properties::margin;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
help: consider adding a `#[cfg(test)]` to the containing module
 --> cases/widget/attrs_allowed_in_properties.rs:4:1
  |
4 | pub mod test_widget {
  | ^^^^^^^^^^^^^^^^^^^
